--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <title>Night Sky Test</title>
 </head>
 <body>
-    <h1>Stop 1</h1>
+    <h2 class="progress-heading-stop">Stop 1</h2>
+    <h1 class="progress-heading">Timp Cave Trail</h1>
+
+    <img class="progress-image" src="./assets/Trail 1.svg" alt="Trail Progress: Stop 1">
+
+    <div class="current-progress-container">
+        <h2>Current Progress</h2>
+
+        <div class="current-progress-info">
+            <div class="current-progress-elevation">
+                <p>ELEVATION</p>
+                <p class="current-progress-number">2,300 FEET</p>
+            </div>
+            <div class="current-progress-distance">
+                <p>DISTANCE</p>
+                <p class="current-progress-number">.4 Miles</p>
+            </div>
+        </div>
+
+        <a class="start-exp-btn" href="./html/welcome.html">Start Experience</a>
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
