--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <a class="start-exp-btn" href="./html/welcome.html">Start Experience</a>
+        <a class="start-exp-btn" href="./html/night-sky.html">Start Experience</a>
     </div>
 
     <script src="./js/script.js"></script>
