--- a/html/night-sky.html
+++ b/html/night-sky.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/welcome.css">
+    <link rel="stylesheet" href="../css/night-sky.css">
     <title>Night Sky - Welcome</title>
 </head>
 <body>
     <h1>Welcome</h1>
 
-    <script src="../js/welcome.js"></script>
+    <script src="../js/night-sky.js"></script>
 </body>
 </html>
