--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Night Sky Test</title>
 </head>
 <body>
+    <!-- Heading -->
     <h2 class="progress-heading-stop">Stop 1</h2>
     <h1 class="progress-heading">Timp Cave Trail</h1>
 
-    <img class="progress-image" src="./assets/Trail 1.svg" alt="Trail Progress: Stop 1">
+    <!-- Mountain progress svg -->
+    <img class="progress-image" src="./assets/Trail1.svg" alt="Trail Progress: Stop 1">
 
+    <!-- Current Progress -->
     <div class="current-progress-container">
         <h2>Current Progress</h2>
 
