Modal shows up now

--- a/html/night-sky.html
+++ b/html/night-sky.html
@@ -32,7 +32,7 @@
     </div>
     
     <!-- Modal -->
-    <!-- <div class="modal" id="welcome-modal">
+    <div class="modal" id="welcome-modal">
         <div class="modal-content">
             <img src="../assets/Night-Sky-Image.svg" alt="Night sky graphic">
 
@@ -43,7 +43,7 @@
 
             <button id="close-modal-btn">Continue</button>
         </div>
-    </div> -->
+    </div>
 
     <script src="../js/night-sky.js"></script>
 </body>
