Updated content to "dark-sky" stuff

--- a/html/dark-sky.html
+++ b/html/dark-sky.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/night-sky.css">
+    <link rel="stylesheet" href="../css/dark-sky.css">
     <title>Night Sky Test</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 
     <div class="info-container">
         <p id="info-text1">INNER-CITY SKY</p>
-        <p id="info-text2">On the Bortle scale, the nine-level numeric scale that measures the night sky's brightness, this night sky represents what you would find in Inner Cities at a 9.</p>
+        <p id="info-text2">The Bortle scale measures the night sky's brightness using a nine-level numeric scale. This night sky represents what you would find in Inner Cities at a 9.</p>
     </div>
     
     <!-- Modal -->
