--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <a class="start-exp-btn" href="./html/night-sky.html">Start Experience</a>
+        <a class="start-exp-btn" href="./html/dark-sky.html">Start Experience</a>
     </div>
 
 </body>
